--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  google_maps_flutter: ^2.9.0
+  firebase_core: ^3.5.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.2
+  firebase_storage: ^12.3.1
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
